objects/amc__Role_Actual__c.object
<CustomObject>
    <fields>
        <fullName>amc__Date__c</fullName>
        <inlineHelpText>Identifies the Date this Role Actual relates to</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Billable_Capacity__c</fullName>
        <formula>amc__Time_Log__r.amc__Exclude_from_Billable_Capacity_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies if the Time Log this Role Actual record relates to was marked as Exclude from Billable Capacity</inlineHelpText>
        <label>Exclude from Billable Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Holiday__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Holiday record this Role Actual relates to</inlineHelpText>
        <label>Holiday</label>
        <referenceTo>amc__Holiday__c</referenceTo>
        <relationshipLabel>Role Actuals</relationshipLabel>
        <relationshipName>Role_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Billable Hours completed from the record this Role Actual relates to (e.g. Time Log or Holiday)</inlineHelpText>
        <label>Hours Completed - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Non Billable Hours completed from the record this Role Actual relates to (e.g. Time Log or Holiday)</inlineHelpText>
        <label>Hours Completed - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Billable__c</fullName>
        <inlineHelpText>Identifies the completed billable value of this Role Actual by multiplying the Hours Completed - Billable with the appropriate Billable Hourly Rate</inlineHelpText>
        <label>Hours Completed Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
        <inlineHelpText>Identifies the completed cost value of this Role Allocation by multiplying the Total Hours Completed with the appropriate Cost Hourly Rate</inlineHelpText>
        <label>Hours Completed Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable__c</fullName>
        <formula>amc__Time_Log__r.amc__Non_Billable_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies if the Time Log this Role Actual record relates to was marked as Non Billable</inlineHelpText>
        <label>Non Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Role_Allocation__c</fullName>
        <inlineHelpText>Links to the Role Allocation record this Role Actual relates to</inlineHelpText>
        <label>Role Allocation</label>
        <referenceTo>amc__Role_Allocation__c</referenceTo>
        <relationshipLabel>Role Actuals</relationshipLabel>
        <relationshipName>Role_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Role record this Role Actual relates to</inlineHelpText>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Role Actuals</relationshipLabel>
        <relationshipName>Role_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Time_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Time Log record this Role Actual relates to</inlineHelpText>
        <label>Time Log</label>
        <referenceTo>amc__Time_Log__c</referenceTo>
        <relationshipLabel>Role Actuals</relationshipLabel>
        <relationshipName>Role_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Completed__c</fullName>
        <formula>amc__Hours_Completed_Billable__c  +  amc__Hours_Completed_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the Total Hours Completed based on &apos;Hours Completed - Billable&apos; + &apos;Hours Completed - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Role Actual</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RACT:{000000}</displayFormat>
        <label>Role Actual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>